--- a/website/mainPage/main.html
+++ b/website/mainPage/main.html
@@ -321,7 +321,7 @@
 
             <div class="img-section-news">
   
-              <img src="/photos/newsImages/aciu.jpg" alt="Naujienos">
+              <img src="/k2KhJatAOr88NdyETp5DeOfgbbwOD5d48CrSq8yV.jpg" alt="Naujienos">
   
             </div>
   
@@ -329,14 +329,14 @@
   
               <div class="new-title">
   
-                <h4>Ilgametį Plungės „Olimpo“ vyr. trenerį Alidą Žukauską keičia Mindaugas Tamušauskas</h4>
+                <h3>Ilgametį Plungės „Olimpo“ vyr. trenerį Alidą Žukauską keičia Mindaugas Tamušauskasaa</h3>
   
               </div>
   
   
               <div class="new-text">
   
-                <p>„Olimpo“ trenerių štabe – esminės permainos. Daugiau nei dešimtmetį vyriausiojo trenerio pareigas ėjusį Alidą Žukauską keičia jo asistentu dirbęs Mindaugas Tamušauskas.aaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaa aaaaaaa aaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaa aaaaaaa aaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaa aaaaaaaa aaaaaaaaa aaaaaaa</p>
+                <p>„Olimpo“ trenerių štabe – esminės permainos. Daugiau nei dešimtmetį vyriausiojo trenerio pareigas ėjusį Alidą Žukauską keičia jo asistentu dirbęs Mindaugas Tamušauskas (...)</p>
                 
               </div>
   
@@ -440,7 +440,7 @@
           <div class="team-slider owl-carousel">
             <div class="single-box text-center">
               <div class="img-area">
-                <img src="/photos/playersPhotos/matas-vysniauskas.jpg" class="img-fluid move-animation" alt="">
+                <img src="/t_1664814656633b0e4027f3e-removebg-preview.png" class="img-fluid move-animation" alt="">
               </div>
               <div class="info-area">
                 <h4>Matas Vyšniauskas</h4>
