--- a/website/nineNews/nineNews.html
+++ b/website/nineNews/nineNews.html
@@ -60,233 +60,235 @@
 
   <div class="container-fluid">
     <div class="container">
-      <div class="news-all">
+      <div class="row">
+        <div class="news-all">
 
-        <div class="news col-xxl-4 col-xl-4">
-
-          <a href="/website/oneNew/firstNew.html" class="opacity-link">
-            <div class="img-news">
-              <img src="/photos/newsImages/sviatlanos-cichanouskajos-kalba-seime-628cc0aa9ae22.jpg" alt="Nuotrauka">
-            </div>
-
-            <div class="info-news">
-              <div class="date">
-                2023.07.02
+          <div class="news col-xxl-4 col-xl-4 col-lg-4 col-md-5 col-sm-6 col-12">
+  
+            <a href="/website/oneNew/firstNew.html" class="opacity-link">
+              <div class="img-news">
+                <img src="/photos/newsImages/sviatlanos-cichanouskajos-kalba-seime-628cc0aa9ae22.jpg" alt="Nuotrauka">
               </div>
-
-              <div class="title-news">
-                <h2>Į Kiprą vyksiantys žalgiriečiai dalyvaus keturių Eurolygos komandų turnyre (0)</h2>
+  
+              <div class="info-news">
+                <div class="date">
+                  2023.07.02
+                </div>
+  
+                <div class="title-news">
+                  <h2>Į Kiprą vyksiantys žalgiriečiai dalyvaus keturių Eurolygos komandų turnyre (0)</h2>
+                </div>
+  
+                <div class="excerpt-news">
+                  <p>Aiškėja pirmieji Kauno „Žalgirio“ pasiruošimo naujajam 2023–2024 m. sezonui kontūrai. Rugsėjo mėnesį žalgiriečiai vyks į Kiprą, kur dalyvaus keturių Eurolygos komandų turnyre.</p>
+                </div>
+  
               </div>
-
-              <div class="excerpt-news">
-                <p>Aiškėja pirmieji Kauno „Žalgirio“ pasiruošimo naujajam 2023–2024 m. sezonui kontūrai. Rugsėjo mėnesį žalgiriečiai vyks į Kiprą, kur dalyvaus keturių Eurolygos komandų turnyre.</p>
+            </a>
+  
+          </div>
+  
+          <div class="news col-xxl-4 col-xl-4 col-lg-4 col-md-5 col-sm-6 col-12">
+  
+            <a href="/index.html" class="opacity-link">
+              <div class="img-news">
+                <img src="/photos/newsImages/Newshub-desktop-Tesonet-invests-in-Zalgiris-Kaunas.webp" alt="Nuotrauka">
               </div>
-
-            </div>
-          </a>
-
+  
+              <div class="info-news">
+                <div class="date">
+                  2023.07.02
+                </div>
+  
+                <div class="title-news">
+                  <h2>Į Kiprą vyksiantys žalgiriečiai dalyvaus keturių Eurolygos komandų turnyre (0)</h2>
+                </div>
+  
+                <div class="excerpt-news">
+                  <p>Aiškėja pirmieji Kauno „Žalgirio“ pasiruošimo naujajam 2023–2024 m. sezonui kontūrai. Rugsėjo mėnesį žalgiriečiai vyks į Kiprą, kur dalyvaus keturių Eurolygos komandų turnyre.</p>
+                </div>
+  
+              </div>
+            </a>
+  
+          </div>
+  
+          <div class="news col-xxl-4 col-xl-4 col-lg-4 col-md-5 col-sm-6 col-12">
+  
+            <a href="/index.html" class="opacity-link">
+              <div class="img-news">
+                <img src="/photos/newsImages/Newshub-desktop-Tesonet-invests-in-Zalgiris-Kaunas.webp" alt="Nuotrauka">
+              </div>
+  
+              <div class="info-news">
+                <div class="date">
+                  2023.07.02
+                </div>
+  
+                <div class="title-news">
+                  <h2>Į Kiprą vyksiantys žalgiriečiai dalyvaus keturių Eurolygos komandų turnyre (0)</h2>
+                </div>
+  
+                <div class="excerpt-news">
+                  <p>Aiškėja pirmieji Kauno „Žalgirio“ pasiruošimo naujajam 2023–2024 m. sezonui kontūrai. Rugsėjo mėnesį žalgiriečiai vyks į Kiprą, kur dalyvaus keturių Eurolygos komandų turnyre.</p>
+                </div>
+  
+              </div>
+            </a>
+  
+          </div>
+  
+          <div class="news col-xxl-4 col-xl-4 col-lg-4 col-md-5 col-sm-6 col-12">
+  
+            <a href="/index.html" class="opacity-link">
+              <div class="img-news">
+                <img src="" alt="Nuotrauka">
+              </div>
+  
+              <div class="info-news">
+                <div class="date">
+                  2023.07.02
+                </div>
+  
+                <div class="title-news">
+                  <h2>Į Kiprą vyksiantys žalgiriečiai dalyvaus keturių Eurolygos komandų turnyre (0)</h2>
+                </div>
+  
+                <div class="excerpt-news">
+                  <p>Aiškėja pirmieji Kauno „Žalgirio“ pasiruošimo naujajam 2023–2024 m. sezonui kontūrai. Rugsėjo mėnesį žalgiriečiai vyks į Kiprą, kur dalyvaus keturių Eurolygos komandų turnyre.</p>
+                </div>
+  
+              </div>
+            </a>
+  
+          </div>
+  
+          <div class="news col-xxl-4 col-xl-4 col-lg-4 col-md-5 col-sm-6 col-12">
+  
+            <a href="/index.html" class="opacity-link">
+              <div class="img-news">
+                <img src="" alt="Nuotrauka">
+              </div>
+  
+              <div class="info-news">
+                <div class="date">
+                  2023.07.02
+                </div>
+  
+                <div class="title-news">
+                  <h2>Į Kiprą vyksiantys žalgiriečiai dalyvaus keturių Eurolygos komandų turnyre (0)</h2>
+                </div>
+  
+                <div class="excerpt-news">
+                  <p>Aiškėja pirmieji Kauno „Žalgirio“ pasiruošimo naujajam 2023–2024 m. sezonui kontūrai. Rugsėjo mėnesį žalgiriečiai vyks į Kiprą, kur dalyvaus keturių Eurolygos komandų turnyre.</p>
+                </div>
+  
+              </div>
+            </a>
+  
+          </div>
+  
+          <div class="news col-xxl-4 col-xl-4 col-lg-4 col-md-5 col-sm-6 col-12">
+  
+            <a href="/index.html" class="opacity-link">
+              <div class="img-news">
+                <img src="" alt="Nuotrauka">
+              </div>
+  
+              <div class="info-news">
+                <div class="date">
+                  2023.07.02
+                </div>
+  
+                <div class="title-news">
+                  <h2>Į Kiprą vyksiantys žalgiriečiai dalyvaus keturių Eurolygos komandų turnyre (0)</h2>
+                </div>
+  
+                <div class="excerpt-news">
+                  <p>Aiškėja pirmieji Kauno „Žalgirio“ pasiruošimo naujajam 2023–2024 m. sezonui kontūrai. Rugsėjo mėnesį žalgiriečiai vyks į Kiprą, kur dalyvaus keturių Eurolygos komandų turnyre.</p>
+                </div>
+  
+              </div>
+            </a>
+  
+          </div>
+  
+          <div class="news col-xxl-4 col-xl-4 col-lg-4 col-md-5 col-sm-6 col-12">
+  
+            <a href="/index.html" class="opacity-link">
+              <div class="img-news">
+                <img src="" alt="Nuotrauka">
+              </div>
+  
+              <div class="info-news">
+                <div class="date">
+                  2023.07.02
+                </div>
+  
+                <div class="title-news">
+                  <h2>Į Kiprą vyksiantys žalgiriečiai dalyvaus keturių Eurolygos komandų turnyre (0)</h2>
+                </div>
+  
+                <div class="excerpt-news">
+                  <p>Aiškėja pirmieji Kauno „Žalgirio“ pasiruošimo naujajam 2023–2024 m. sezonui kontūrai. Rugsėjo mėnesį žalgiriečiai vyks į Kiprą, kur dalyvaus keturių Eurolygos komandų turnyre.</p>
+                </div>
+  
+              </div>
+            </a>
+  
+          </div>
+  
+          <div class="news col-xxl-4 col-xl-4 col-lg-4 col-md-5 col-sm-6 col-12">
+  
+            <a href="/index.html" class="opacity-link">
+              <div class="img-news">
+                <img src="" alt="Nuotrauka">
+              </div>
+  
+              <div class="info-news">
+                <div class="date">
+                  2023.07.02
+                </div>
+  
+                <div class="title-news">
+                  <h2>Į Kiprą vyksiantys žalgiriečiai dalyvaus keturių Eurolygos komandų turnyre (0)</h2>
+                </div>
+  
+                <div class="excerpt-news">
+                  <p>Aiškėja pirmieji Kauno „Žalgirio“ pasiruošimo naujajam 2023–2024 m. sezonui kontūrai. Rugsėjo mėnesį žalgiriečiai vyks į Kiprą, kur dalyvaus keturių Eurolygos komandų turnyre.</p>
+                </div>
+  
+              </div>
+            </a>
+  
+          </div>
+  
+          <div class="news col-xxl-4 col-xl-4 col-lg-4 col-md-5 col-sm-6 col-12">
+  
+            <a href="/index.html" class="opacity-link">
+              <div class="img-news">
+                <img src="" alt="Nuotrauka">
+              </div>
+  
+              <div class="info-news">
+                <div class="date">
+                  2023.07.02
+                </div>
+  
+                <div class="title-news">
+                  <h2>Į Kiprą vyksiantys žalgiriečiai dalyvaus keturių Eurolygos komandų turnyre (0)</h2>
+                </div>
+  
+                <div class="excerpt-news">
+                  <p>Aiškėja pirmieji Kauno „Žalgirio“ pasiruošimo naujajam 2023–2024 m. sezonui kontūrai. Rugsėjo mėnesį žalgiriečiai vyks į Kiprą, kur dalyvaus keturių Eurolygos komandų turnyre.</p>
+                </div>
+  
+              </div>
+            </a>
+  
+          </div>
+  
         </div>
-
-        <div class="news col-xxl-4 col-xl-4">
-
-          <a href="/index.html" class="opacity-link">
-            <div class="img-news">
-              <img src="/photos/newsImages/aciu.jpg" alt="Nuotrauka">
-            </div>
-
-            <div class="info-news">
-              <div class="date">
-                2023.07.02
-              </div>
-
-              <div class="title-news">
-                <h2>Į Kiprą vyksiantys žalgiriečiai dalyvaus keturių Eurolygos komandų turnyre (0)</h2>
-              </div>
-
-              <div class="excerpt-news">
-                <p>Aiškėja pirmieji Kauno „Žalgirio“ pasiruošimo naujajam 2023–2024 m. sezonui kontūrai. Rugsėjo mėnesį žalgiriečiai vyks į Kiprą, kur dalyvaus keturių Eurolygos komandų turnyre.</p>
-              </div>
-
-            </div>
-          </a>
-
-        </div>
-
-        <div class="news col-xxl-4 col-xl-4">
-
-          <a href="/index.html" class="opacity-link">
-            <div class="img-news">
-              <img src="/photos/newsImages/Newshub-desktop-Tesonet-invests-in-Zalgiris-Kaunas.webp" alt="Nuotrauka">
-            </div>
-
-            <div class="info-news">
-              <div class="date">
-                2023.07.02
-              </div>
-
-              <div class="title-news">
-                <h2>Į Kiprą vyksiantys žalgiriečiai dalyvaus keturių Eurolygos komandų turnyre (0)</h2>
-              </div>
-
-              <div class="excerpt-news">
-                <p>Aiškėja pirmieji Kauno „Žalgirio“ pasiruošimo naujajam 2023–2024 m. sezonui kontūrai. Rugsėjo mėnesį žalgiriečiai vyks į Kiprą, kur dalyvaus keturių Eurolygos komandų turnyre.</p>
-              </div>
-
-            </div>
-          </a>
-
-        </div>
-
-        <div class="news col-xxl-4 col-xl-4">
-
-          <a href="/index.html" class="opacity-link">
-            <div class="img-news">
-              <img src="" alt="Nuotrauka">
-            </div>
-
-            <div class="info-news">
-              <div class="date">
-                2023.07.02
-              </div>
-
-              <div class="title-news">
-                <h2>Į Kiprą vyksiantys žalgiriečiai dalyvaus keturių Eurolygos komandų turnyre (0)</h2>
-              </div>
-
-              <div class="excerpt-news">
-                <p>Aiškėja pirmieji Kauno „Žalgirio“ pasiruošimo naujajam 2023–2024 m. sezonui kontūrai. Rugsėjo mėnesį žalgiriečiai vyks į Kiprą, kur dalyvaus keturių Eurolygos komandų turnyre.</p>
-              </div>
-
-            </div>
-          </a>
-
-        </div>
-
-        <div class="news col-xxl-4 col-xl-4">
-
-          <a href="/index.html" class="opacity-link">
-            <div class="img-news">
-              <img src="" alt="Nuotrauka">
-            </div>
-
-            <div class="info-news">
-              <div class="date">
-                2023.07.02
-              </div>
-
-              <div class="title-news">
-                <h2>Į Kiprą vyksiantys žalgiriečiai dalyvaus keturių Eurolygos komandų turnyre (0)</h2>
-              </div>
-
-              <div class="excerpt-news">
-                <p>Aiškėja pirmieji Kauno „Žalgirio“ pasiruošimo naujajam 2023–2024 m. sezonui kontūrai. Rugsėjo mėnesį žalgiriečiai vyks į Kiprą, kur dalyvaus keturių Eurolygos komandų turnyre.</p>
-              </div>
-
-            </div>
-          </a>
-
-        </div>
-
-        <div class="news col-xxl-4 col-xl-4">
-
-          <a href="/index.html" class="opacity-link">
-            <div class="img-news">
-              <img src="" alt="Nuotrauka">
-            </div>
-
-            <div class="info-news">
-              <div class="date">
-                2023.07.02
-              </div>
-
-              <div class="title-news">
-                <h2>Į Kiprą vyksiantys žalgiriečiai dalyvaus keturių Eurolygos komandų turnyre (0)</h2>
-              </div>
-
-              <div class="excerpt-news">
-                <p>Aiškėja pirmieji Kauno „Žalgirio“ pasiruošimo naujajam 2023–2024 m. sezonui kontūrai. Rugsėjo mėnesį žalgiriečiai vyks į Kiprą, kur dalyvaus keturių Eurolygos komandų turnyre.</p>
-              </div>
-
-            </div>
-          </a>
-
-        </div>
-
-        <div class="news col-xxl-4 col-xl-4">
-
-          <a href="/index.html" class="opacity-link">
-            <div class="img-news">
-              <img src="" alt="Nuotrauka">
-            </div>
-
-            <div class="info-news">
-              <div class="date">
-                2023.07.02
-              </div>
-
-              <div class="title-news">
-                <h2>Į Kiprą vyksiantys žalgiriečiai dalyvaus keturių Eurolygos komandų turnyre (0)</h2>
-              </div>
-
-              <div class="excerpt-news">
-                <p>Aiškėja pirmieji Kauno „Žalgirio“ pasiruošimo naujajam 2023–2024 m. sezonui kontūrai. Rugsėjo mėnesį žalgiriečiai vyks į Kiprą, kur dalyvaus keturių Eurolygos komandų turnyre.</p>
-              </div>
-
-            </div>
-          </a>
-
-        </div>
-
-        <div class="news col-xxl-4 col-xl-4">
-
-          <a href="/index.html" class="opacity-link">
-            <div class="img-news">
-              <img src="" alt="Nuotrauka">
-            </div>
-
-            <div class="info-news">
-              <div class="date">
-                2023.07.02
-              </div>
-
-              <div class="title-news">
-                <h2>Į Kiprą vyksiantys žalgiriečiai dalyvaus keturių Eurolygos komandų turnyre (0)</h2>
-              </div>
-
-              <div class="excerpt-news">
-                <p>Aiškėja pirmieji Kauno „Žalgirio“ pasiruošimo naujajam 2023–2024 m. sezonui kontūrai. Rugsėjo mėnesį žalgiriečiai vyks į Kiprą, kur dalyvaus keturių Eurolygos komandų turnyre.</p>
-              </div>
-
-            </div>
-          </a>
-
-        </div>
-
-        <div class="news col-xxl-4 col-xl-4">
-
-          <a href="/index.html" class="opacity-link">
-            <div class="img-news">
-              <img src="" alt="Nuotrauka">
-            </div>
-
-            <div class="info-news">
-              <div class="date">
-                2023.07.02
-              </div>
-
-              <div class="title-news">
-                <h2>Į Kiprą vyksiantys žalgiriečiai dalyvaus keturių Eurolygos komandų turnyre (0)</h2>
-              </div>
-
-              <div class="excerpt-news">
-                <p>Aiškėja pirmieji Kauno „Žalgirio“ pasiruošimo naujajam 2023–2024 m. sezonui kontūrai. Rugsėjo mėnesį žalgiriečiai vyks į Kiprą, kur dalyvaus keturių Eurolygos komandų turnyre.</p>
-              </div>
-
-            </div>
-          </a>
-
-        </div>
-
       </div>
     </div>
   </div>
