--- a/website/schedule/schedule.html
+++ b/website/schedule/schedule.html
@@ -58,151 +58,151 @@
         <tr>
           <th scope="col">Data</th>
           <th scope="col">Komandos</th>
-          <th scope="col">Laikas/Rezultatas</th>
+          <th scope="col">Laikas/Rez.</th>
         </tr>
       </thead>
       <tbody>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
 
         <tr>
-          <th scope="row">2023-09-13</th>
+          <th scope="row">2023 birželio 13d.</th>
           <td> <img src="/photos/rkl/olimpas.svg" alt=""> Plungės „Olimpas“ - Kauno „Žalgiris-3“ <img src="/photos/rkl/zalgiris.svg" alt=""></td>
           <td>17:32</td>
         </tr>
