--- a/website/sponsors/sponsors.html
+++ b/website/sponsors/sponsors.html
@@ -52,7 +52,7 @@
     <div class="container">
         <div class="sponsors-all">
             <div class="sponsors-title">
-                <h1>Generalinis rėmėjas</h1>
+                <h2>Generalinis rėmėjas</h2>
             </div>
             <div class="general-sponsors">
                 <a href="https://www.plunge.lt/" target="_blank">
@@ -61,7 +61,7 @@
             </div>
 
             <div class="sponsors-title">
-                <h1>Pagrindiniai rėmėjai</h1>
+                <h2>Pagrindiniai rėmėjai</h2>
             </div>    
             <div class="main-sponsors">
                 <a href="https://plungeslaguna.lt/" target="_blank">
@@ -76,11 +76,11 @@
             </div>
 
             <div class="sponsors-title">
-                <h1>Rėmėjai</h1>
+                <h2>Rėmėjai</h2>
             </div>
             <div class="sponsors">
               <a href="https://constro.eu/" target="_blank">
-                <img src="/photos/sponsors/constro.png" width="240" alt="Lagūna">
+                <img class="constro" src="/photos/sponsors/constro.png" width="240" alt="Lagūna">
               </a>
               <a href="https://www.oss.lt/lt/" target="_blank">
                 <img src="/photos/sponsors/oss.png" alt="Oss">
@@ -101,16 +101,16 @@
                 <img src="/photos/sponsors/slenis.png" alt="Slėnis">
               </a>
               <a href="https://pasagota.lt/" target="_blank">
-                <img src="/photos/sponsors/Agotos.png" width="240" alt="Agotos Parduotuvė">
+                <img class="agotos" src="/photos/sponsors/Agotos.png" width="240" alt="Agotos Parduotuvė">
               </a>
             </div>
 
             <div class="sponsors-title">
-                <h1>Partneriai</h1>
+                <h2>Partneriai</h2>
             </div>    
             <div class="partners">
               <a href="https://www.facebook.com/vieninga.plunge/?locale=lt_LT" target="_blank">
-                <img src="/photos/sponsors/Vieninga_Plunge.png" alt="Vieninga Plungė">
+                <img class="vieninga" src="/photos/sponsors/Vieninga_Plunge.png" alt="Vieninga Plungė">
               </a>
               <a href="https://plungesrc.lt/" target="_blank">
                 <img src="/photos/sponsors/sporto centras.png" alt="Plungės sporto ir rekreacijos centras">
