--- a/website/mainPage/main.html
+++ b/website/mainPage/main.html
@@ -329,7 +329,7 @@
   
               <div class="new-title">
   
-                <h3>Ilgametį Plungės „Olimpo“ vyr. trenerį Alidą Žukauską keičia Mindaugas Tamušauskasaa</h3>
+                <h3>Ilgametį Plungės „Olimpo“ vyr. trenerį Alidą Žukauską keičia Mindaugas Tamuš</h3>
   
               </div>
   
@@ -551,7 +551,7 @@
 
         <tr>
           <th scope="row">3.</th>
-          <td> <img src="/photos/rkl/vdu.svg" alt="">Kauno „Vytauto Dydžiojo universitetas“</td>
+          <td> <img src="/photos/rkl/vdu.svg" alt=""><span class="full">Kauno „Vytauto Dydžiojo universitetas“</span><span class="short">Kauno „VDU“</span></td>
           <td>25</td>
           <td>20</td>
           <td><div class="last-games">
@@ -565,7 +565,7 @@
 
         <tr>
           <th scope="row">4.</th>
-          <td> <img src="/photos/rkl/labas.svg" alt="">Prienų „Labas GAS-KKSC“</td>
+          <td> <img src="/photos/rkl/labas.svg" alt=""><span class="full">Prienų „Labas GAS-KKSC“</span><span class="short">Prienų „KKSC“</span></td>
           <td>25</td>
           <td>20</td>
           <td><div class="last-games">
@@ -607,7 +607,7 @@
 
         <tr>
           <th scope="row">7.</th>
-          <td> <img src="/photos/rkl/lcc.svg" alt="">Klaipėdos „LCC Tarptautinis universitetas“</td>
+          <td> <img src="/photos/rkl/lcc.svg" alt=""><span class="full">Klaipėdos „LCC Tarptautinis universitetas“</span><span class="short">Klaipėdos „LCC“</span></td>
           <td>25</td>
           <td>20</td>
           <td><div class="last-games">
@@ -621,7 +621,7 @@
 
         <tr>
           <th scope="row">8.</th>
-          <td> <img src="/photos/rkl/grafu-furniture.svg" alt="">Šiaulių r. Kuršėnų „Kristalas-Grafu Furniture“</td>
+          <td> <img src="/photos/rkl/grafu-furniture.svg" alt=""><span class="full">Šiaulių r. Kuršėnų „Kristalas-Grafu Furniture“</span><span class="short">Kuršėnų „Kristalas-GF“</span></td>
           <td>25</td>
           <td>20</td>
           <td><div class="last-games">
@@ -719,7 +719,7 @@
 
         <tr>
           <th scope="row">15.</th>
-          <td> <img src="/photos/rkl/ktu.svg" alt="">Kauno „Kauno technologijos universitetas“</td>
+          <td> <img src="/photos/rkl/ktu.svg" alt=""><span class="full">Kauno „Kauno technologijos universitetas“</span><span class="short">Kauno „KTU“</span></td>
           <td>25</td>
           <td>20</td>
           <td><div class="last-games">
@@ -755,7 +755,7 @@
 <div class="container-fluid">
   <div class="container">
     <div class="partners-title">
-      <h1>Rėmejai</h1>
+      <h1>Rėmėjai</h1>
     </div>
   </div>
 </div>
