--- a/website/mainPage/main.html
+++ b/website/mainPage/main.html
@@ -74,6 +74,9 @@
         </div>
   
         <div class="game-first">
+
+          <div class="line">
+          </div>
     
           <div class="game-data">
       
@@ -302,6 +305,9 @@
             <p>Vieta: Plungė</p>
           </div>
 
+          <div class="line">
+          </div>
+
         </div>
 
         <div class="button-all-games">
@@ -331,7 +337,7 @@
   
               <div class="new-title">
   
-                <h3>Ilgametį Plungės „Olimpo“ vyr. trenerį Alidą Žukauską keičia Mindaugas Tamuš</h3>
+                <h4>Ilgametį Plungės „Olimpo“ vyr. trenerį Alidą Žukauską keičia Mindaugas Tamuš</h4>
   
               </div>
   
