--- a/website/nineNews/nineNews.html
+++ b/website/nineNews/nineNews.html
@@ -67,7 +67,7 @@
   
             <a href="/website/oneNew/firstNew.html" class="opacity-link">
               <div class="img-news">
-                <img src="/photos/newsImages/sviatlanos-cichanouskajos-kalba-seime-628cc0aa9ae22.jpg" alt="Nuotrauka">
+                <img src="/photos/newsImages/eb1c65c4-3ce6-425c-864a-57751ada3590.jpg" alt="Nuotrauka">
               </div>
   
               <div class="info-news">
@@ -90,9 +90,9 @@
   
           <div class="news col-xxl-4 col-xl-4 col-lg-4 col-md-5 col-sm-6 col-12">
   
-            <a href="/index.html" class="opacity-link">
+            <a href="/website/oneNew/secondNew.html" class="opacity-link">
               <div class="img-news">
-                <img src="/photos/newsImages/Newshub-desktop-Tesonet-invests-in-Zalgiris-Kaunas.webp" alt="Nuotrauka">
+                <img src="/photos/newsImages/0a511cf8-0e4d-41c7-adb5-899aba235662.jpg" alt="Nuotrauka">
               </div>
   
               <div class="info-news">
@@ -115,9 +115,9 @@
   
           <div class="news col-xxl-4 col-xl-4 col-lg-4 col-md-5 col-sm-6 col-12">
   
-            <a href="/index.html" class="opacity-link">
+            <a href="/website/oneNew/thirdNew.html" class="opacity-link">
               <div class="img-news">
-                <img src="/photos/newsImages/Newshub-desktop-Tesonet-invests-in-Zalgiris-Kaunas.webp" alt="Nuotrauka">
+                <img src="/photos/newsImages/1dcf2c3a-afb9-4308-95e5-5b5ab68e4bc7.jpg" alt="Nuotrauka">
               </div>
   
               <div class="info-news">
@@ -140,9 +140,9 @@
   
           <div class="news col-xxl-4 col-xl-4 col-lg-4 col-md-5 col-sm-6 col-12">
   
-            <a href="/index.html" class="opacity-link">
+            <a href="/website/oneNew/fourthNew.html" class="opacity-link">
               <div class="img-news">
-                <img src="" alt="Nuotrauka">
+                <img src="/photos/newsImages/1dcf2c3a-afb9-4308-95e5-5b5ab68e4bc7.jpg" alt="Nuotrauka">
               </div>
   
               <div class="info-news">
@@ -165,9 +165,9 @@
   
           <div class="news col-xxl-4 col-xl-4 col-lg-4 col-md-5 col-sm-6 col-12">
   
-            <a href="/index.html" class="opacity-link">
+            <a href="/website/oneNew/fifthNew.html" class="opacity-link">
               <div class="img-news">
-                <img src="" alt="Nuotrauka">
+                <img src="/photos/newsImages/eb1c65c4-3ce6-425c-864a-57751ada3590.jpg" alt="Nuotrauka">
               </div>
   
               <div class="info-news">
@@ -190,9 +190,9 @@
   
           <div class="news col-xxl-4 col-xl-4 col-lg-4 col-md-5 col-sm-6 col-12">
   
-            <a href="/index.html" class="opacity-link">
+            <a href="/website/oneNew/sixthNew.html" class="opacity-link">
               <div class="img-news">
-                <img src="" alt="Nuotrauka">
+                <img src="/photos/newsImages/0a511cf8-0e4d-41c7-adb5-899aba235662.jpg" alt="Nuotrauka">
               </div>
   
               <div class="info-news">
@@ -215,9 +215,9 @@
   
           <div class="news col-xxl-4 col-xl-4 col-lg-4 col-md-5 col-sm-6 col-12">
   
-            <a href="/index.html" class="opacity-link">
+            <a href="/website/oneNew/seventhNew.html" class="opacity-link">
               <div class="img-news">
-                <img src="" alt="Nuotrauka">
+                <img src="/photos/newsImages/0a511cf8-0e4d-41c7-adb5-899aba235662.jpg" alt="Nuotrauka">
               </div>
   
               <div class="info-news">
@@ -240,9 +240,9 @@
   
           <div class="news col-xxl-4 col-xl-4 col-lg-4 col-md-5 col-sm-6 col-12">
   
-            <a href="/index.html" class="opacity-link">
+            <a href="/website/oneNew/eighthNew.html" class="opacity-link">
               <div class="img-news">
-                <img src="" alt="Nuotrauka">
+                <img src="/photos/newsImages/1dcf2c3a-afb9-4308-95e5-5b5ab68e4bc7.jpg" alt="Nuotrauka">
               </div>
   
               <div class="info-news">
@@ -265,9 +265,9 @@
   
           <div class="news col-xxl-4 col-xl-4 col-lg-4 col-md-5 col-sm-6 col-12">
   
-            <a href="/index.html" class="opacity-link">
+            <a href="/website/oneNew/ninthNew.html" class="opacity-link">
               <div class="img-news">
-                <img src="" alt="Nuotrauka">
+                <img src="/photos/newsImages/eb1c65c4-3ce6-425c-864a-57751ada3590.jpg" alt="Nuotrauka">
               </div>
   
               <div class="info-news">
