--- a/website/team/team.html
+++ b/website/team/team.html
@@ -156,7 +156,7 @@
           </div>
 
           <div class="about">
-            <p>Fizinio pasirengi</p>
+            <p>Fizinio treneris</p>
           </div>
                                                             
         </div>
